--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,2 +1,14 @@
-$primary-color: white;
+$text-grey: #3f4954;
+$text-light: #686666da;
 $text-primary: #333;
+$bg-color: #0f0f0f;
+$white: #ffffff;
+$midnight: #104f55;
+$social-hover: #a1c4c5;
+$sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+$abel: 'Abel', cursive;
+$anton: 'Anton', cursive;
+$josefin: 'Josefin Sans', cursive;
+$lexend: 'Lexend Deca', cursive;
+$livvic: 'Livvic', sans-serif;
+$box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
