--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,4 @@
-/*================ ABLE FONT =================*/
-@font-face {
-  font-family: Able;
-  src: url(../fonts/Abel/Abel-Regular.ttf);
-}
-
-/*================ ANTON-REGULAR FONT =================*/
-@font-face {
-  font-family: Able;
-  src: url(../fonts/Anton/Anton-Regular.ttf);
-}
-
-/*================ JOSEFINSANS FONT =================*/
-@font-face {
-  font-family: Able;
-  src: url(../fonts/Josefin_Sans/JosefinSans-Regular.ttf);
-}
-
-/*================ LEXENDDECA FONT =================*/
-@font-face {
-  font-family: Able;
-  src: url(../fonts/Lexend_Deca/LexendDeca-Regular.ttf);
-}
-
-/*================ LIVVIC FONT =================*/
-@font-face {
-  font-family: Able;
-  src: url(../fonts/Livvic/Livvic-Regular.ttf);
-}
-
+@import url("https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -43,83 +14,62 @@ html, body {
 /*========================= GLOBAL CLASSES ===============================*/
 a {
   text-decoration: none;
-}
-
-.navLink {
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-}
-
-.flex-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  color: #3f4954;
 }
 
 /*========================= END GLOBAL CLASSES ===============================*/
-/*========================== NAVBAR ===========================*/
-.navigation {
-  background: white;
-  padding: 0 2rem;
-  height: 0;
-  min-height: 20vh;
-  overflow: hidden;
-}
-
-.navigation .nav-brand {
-  display: inline-block;
-  padding: 1.6rem 0;
-}
-
-.navigation .nav-brand a {
+.header nav .navbar-brand {
   font-size: 1.6rem;
-  vertical-align: middle;
-  margin-top: 1rem;
-  color: #333;
+  font-family: "Abel", cursive;
+  font-weight: 500;
 }
 
-.main-menu {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.header nav .navbar-brand:hover {
+  color: #3f4954;
 }
 
-.main-menu .navbarNav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-}
-
-.main-menu .navbarNav .navItem {
-  padding: 1.6rem 1rem;
-}
-
-.main-menu .navbarNav .navItem .navLink {
+.header nav .navbar-nav .nav-item .nav-link {
+  font-family: "Abel", cursive;
   font-size: 1.1rem;
-  color: #333;
-  position: relative;
-}
-
-.main-menu .social {
-  padding: 1.6rem 0;
-}
-
-.main-menu .social a {
-  margin-right: .75rem;
+  font-weight: 500;
   color: #333;
 }
 
-/*============x=========== END NAVBAR ============x============*/
+.header nav .navbar-nav .nav-item .nav-link:hover {
+  background-color: #104f55;
+  color: #ffffff;
+}
+
+.header nav .navbar-nav .nav-item.active .nav-link {
+  background: #104f55;
+  color: #ffffff;
+}
+
+.header nav .social .nav-item:hover .nav-link .fab {
+  color: #a1c4c5;
+}
+
+.header nav .social .nav-item:hover .nav-link:hover {
+  background: transparent;
+}
+
+.header .sticky {
+  position: fixed;
+  width: 100%;
+  margin-top: -1px;
+  top: 0;
+  left: 0;
+  background: #ffffff;
+  vertical-align: middle;
+  z-index: 9999;
+  -webkit-box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
+          box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
+  -webkit-transition: background 1s ease;
+  transition: background 1s ease;
+}
+
+/*==================== VIEWPORT LESS THEN OR EQUAL TO 750PX ======================*/
+/*===================x VIEWPORT LESS THEN OR EQUAL TO 750PX x=====================*/
 /*========================  ========================*/
 /*============x=========== END ============x============*/
 /*========================  ========================*/
