--- a/assets/sass/_fontface.scss
+++ b/assets/sass/_fontface.scss
@@ -1,29 +1,1 @@
-/*================ ABLE FONT =================*/
-@font-face {
-    font-family: Able;
-    src: url(../fonts/Abel/Abel-Regular.ttf);
-}
-
-/*================ ANTON-REGULAR FONT =================*/
-@font-face {
-    font-family: Able;
-    src: url(../fonts/Anton/Anton-Regular.ttf);
-}
-
-/*================ JOSEFINSANS FONT =================*/
-@font-face {
-    font-family: Able;
-    src: url(../fonts/Josefin_Sans/JosefinSans-Regular.ttf);
-}
-
-/*================ LEXENDDECA FONT =================*/
-@font-face {
-    font-family: Able;
-    src: url(../fonts/Lexend_Deca/LexendDeca-Regular.ttf);
-}
-
-/*================ LIVVIC FONT =================*/
-@font-face {
-    font-family: Able;
-    src: url(../fonts/Livvic/Livvic-Regular.ttf);
-}
+@import url('https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap');
