--- a/assets/sass/_nav.scss
+++ b/assets/sass/_nav.scss
@@ -1,48 +1,62 @@
-/*========================== NAVBAR ===========================*/
-
-.navigation {
-    background: $primary-color;
-    padding: 0 2rem;
-    height: 0;
-    min-height: 20vh;
-    overflow: hidden;
-    
-    .nav-brand {
-        display: inline-block;
-        padding: 1.6rem 0;
-        a {
+.header {
+    nav {
+        .navbar-brand {
             font-size: 1.6rem;
-            vertical-align: middle;
-            margin-top: 1rem;
-            color: $text-primary;
+            font-family: $abel;
+            font-weight: 500;
+            &:hover {
+                color: $text-grey;
+            }
         }
-    }
-}
 
-.main-menu {
-    justify-content: space-between;
-}
+        .navbar-nav {
+            .nav-item {
+                .nav-link {
+                    font-family: $abel;
+                    font-size: 1.1rem;
+                    font-weight: 500;
+                    color: $text-primary;
+                    &:hover {
+                        background-color: $midnight;
+                        color: $white;
+                    }
+                }
+            }
 
-.main-menu {
-    .navbarNav {
-        display: flex;
-        margin: 0;
-        .navItem {
-            padding: 1.6rem 1rem;
-            .navLink {
-                font-size: 1.1rem;
-                color: $text-primary;
-                position: relative;
+            .nav-item.active {
+                .nav-link {
+                    background: $midnight;
+                    color: $white;
+                }
+            }
+        }
+
+        .social {
+            .nav-item {
+                &:hover {
+                    .nav-link {
+                        .fab {
+                            color: $social-hover;
+                        }
+                        &:hover {
+                            background: transparent;
+                        }
+                    }
+                }
             }
         }
     }
-    .social {
-        padding: 1.6rem 0;
-        a {
-            margin-right: .75rem;
-            color: $text-primary;
-        }
+
+    .sticky {
+        position: fixed;
+        width: 100%;
+        margin-top: -1px;
+        top: 0;
+        left: 0;
+        background: $white;
+        vertical-align: middle;
+        z-index: 9999;
+        box-shadow: $box-shadow;
+        transition: background 1s ease;
     }
 }
-
-/*============x=========== END NAVBAR ============x============*/
