--- a/assets/sass/_reset.scss
+++ b/assets/sass/_reset.scss
@@ -12,20 +12,6 @@ html, body {
 /*========================= GLOBAL CLASSES ===============================*/
 a {
     text-decoration: none;
-}
-
-.navLink {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-}
-
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    color: $text-grey;
 }
 /*========================= END GLOBAL CLASSES ===============================*/
