--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,6 +2,7 @@
 @import "_fontface.scss";
 @import "_reset.scss";
 @import "_nav.scss";
+@import "_responsive.scss";
 // @import "_home.scss";
 // @import "_mixin.scss";
 // @import "_responsive.scss";
