--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -12,3 +12,5 @@ $josefin: 'Josefin Sans', cursive;
 $lexend: 'Lexend Deca', cursive;
 $livvic: 'Livvic', sans-serif;
 $box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
+$transition: all .25s ease-in-out;
+$blog-box-shadow: 0 15px 20px rgba(0, 0, 0, .2);
