--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,8 +1,10 @@
-@import "_variables.scss";
-@import "_fontface.scss";
-@import "_reset.scss";
-@import "_nav.scss";
-@import "_responsive.scss";
+@import "variables";
+@import "fontface";
+@import "reset";
+@import "nav";
+@import "home";
+@import "mixin";
+@import "responsive";
 // @import "_home.scss";
 // @import "_mixin.scss";
 // @import "_responsive.scss";
