--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,6 +4,7 @@
 @import "nav";
 @import "home";
 @import "mixin";
+@import "footer";
 @import "responsive";
 // @import "_home.scss";
 // @import "_mixin.scss";
