--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,6 +2,7 @@ $text-grey: #3f4954;
 $text-light: #686666da;
 $text-primary: #333;
 $bg-color: #0f0f0f;
+$text-white: rgba(255, 255, 255, .9);
 $white: #ffffff;
 $midnight: #104f55;
 $social-hover: #a1c4c5;
